# AiCoding

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/: arc.txt
data/projects/00ee2c9b-1cb1-4c83-beaf-d06dc983214d/: project.json
data/projects/0dcfe2d9-9e7a-4306-bbe3-d9927191b6ed/: project.json
data/projects/3f151c45-dad3-4aa4-ac06-f0c91b5527d4/: project.json
data/projects/3f3ac52f-cb47-402c-a11a-fc34c96d8dbb/: project.json
data/projects/46490615-a029-431d-949e-091655099592/: project.json
data/projects/56ecd1d9-3378-4999-91f2-93274df843f5/: project.json
data/projects/6315b1ed-9c15-4419-9c66-6935f771d968/: project.json
data/projects/847cda69-d032-42c1-851e-14cc48117b03/: project.json
data/projects/e723dec8-c7fe-487e-a7b8-561f95c65fc8/: project.json
docuflow/: __init__.py  __main__.py
docuflow/api/: __init__.py  dependencies.py  main.py
docuflow/api/routers/: __init__.py  modules.py  projects.py  tasks.py  websocket.py
docuflow/api/schemas/: __init__.py  module.py  project.py  task.py
docuflow/api/services/: __init__.py  notification_service.py  project_service.py  task_service.py
docuflow/cli/: __init__.py  app.py
docuflow/core/: __init__.py  config.py  models.py  orchestrator.py
docuflow/graph/: __init__.py  builder.py  edges.py  nodes.py  orchestrator.py  state.py
docuflow/llm/: __init__.py  client.py  generators.py  prompts.py  vision_client.py
docuflow/parsers/: __init__.py  base.py  chunker.py  factory.py  image_extractor.py
docuflow/utils/: __init__.py  file_io.py  logging.py  validation.py
(+532 files in other folders)
